--- a/index.html
+++ b/index.html
@@ -18,6 +18,26 @@
 
     <button id="soundControl">SOUND ICON TO INSERT mute/unmute</button>
 
+    <div class="div">
+      <div class="navigation">
+        <h1>The POKÉ-MEM</h1>
+        <h2>Instructions</h1>
+          <p>
+            Welcome to the Pokemon Memory Game : The Poké-Mem !
+            The goal is to find cards pair.
+            You will only see 2 cards as the same time maximum.
+            Once you have found all pairs, you win.<br>
+            Enjoy the figth!
+          </p>
+      </div>
+    </div>
+    <div>
+      <button id="soundControl">START</button>
+    </div>
+    <div>
+      <button id="soundControl">HIDE</button>
+    </div>
+
     <script src="./landing.js"></script>
   </body>
 </html>
