--- a/arena.html
+++ b/arena.html
@@ -8,13 +8,10 @@
     <link rel="stylesheet" href="./board.css">
   </head>
   <body>
-    <div>
-      <h1>Poké-Mem Aréna</h1>
-    </div>
     <div id="score">
-      <h2>Score</h2>
+      <h2>Time Left : 0:00:00</h2>
       <p>Pairs clicked: <span id="pairs-clicked">0</span></p>
-      <p>Pairs guessed: <span id="pairs-guessed">0</span></p>
+      <p>Pairs guessed: <span id="pairs-guessed">0</span>/12</p>
     </div>
     <div id="poke-board"></div>
 
