--- a/arena.html
+++ b/arena.html
@@ -22,7 +22,7 @@
             ></lottie-player
           ></a>
         </li>
-        <li>05:00</li>
+        <li >Time: <span id = 'timer' >No-limit</span> </li>
         <li id="start">
           <lottie-player
             src="https://assets6.lottiefiles.com/packages/lf20_1X6X9xuFYX.json"
@@ -73,7 +73,7 @@
 
       <div class="navigation-two">
         <h1>You win !</h1>
-        <p class="replay">Replay</p>
+        <p id="winReplay" class="replay">Replay</p>
       </div>
     </div>
 
@@ -88,7 +88,7 @@
 
       <div class="navigation-two">
         <h1>You Lose !</h1>
-        <p class="replay">
+        <p id="loseReplay" class="replay">
           Try Again ?
           <br />
         </p>
