--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <video autoplay muted loop id="myVideo">
       <source src="medias/backG.mp4" type="video/mp4" />
     </video>
-    <!-- <audio controls  autoplay loop id="landingSound">
+    <audio autoplay loop id="landingSound">
       <source src="./medias/audio/pokemonMainMusic.mp3" type="audio/mpeg" />
     </audio> 
-
+<!-- 
     <div class="audio-player">
       <div class="icon-container">
         <img class="button-instruction"
@@ -50,12 +50,46 @@
           <p>
             Welcome to the Pokemon Memory Game : The Poké-Mem ! The goal is to
             find cards pair. You will only see 2 cards as the same time maximum.
-            Once you have found all pairs, you win.<br />
-            Enjoy the fight!
+            Once you have found all pairs, you win.
+            
           </p>
+          <button id="button_rules"><h2>Level's Rules</h2> </button> 
         </div>
       </div>
     </div>
+
+
+
+      <div id="rules">
+        <div class="navigation-two">
+          <button id="close-instructions-rules">
+            <img
+              class="button-instruction"
+              src="./img/NicePng_close-button-png_521653.png"
+              alt="close instructions"
+            />
+          </button>
+          
+          <h1>Rules</h1>
+          <p>
+            Level 1 : No limit of time 
+            <br>
+            Level 2 : 3:00 Time limit
+            <br>
+            Level 3 : 1:30 Time Limit
+            <br>
+            Level 4 : 30sec Time Limit
+          </p>
+        </div>
+      </div>
+ 
+
+
+
+
+
+
+
 
     <!--Div du bouton start-->
     <div class="wrapper start">
