default sound on landing page set at a lower volume, feature of mute/unmute control added, set the sound in mute state when the user come for the first time

--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
     <audio autoplay loop id="landingSound">
       <source src="./medias/audio/pokemonMainMusic.mp3" type="audio/mpeg" />
     </audio> 
+
+    <div id="sound-control">
+      <img id="iconAudio" class="button-instruction"
+              src="./img/noAudioIcon.png"
+              alt="sound on/off"
+            />
+    </div> 
 <!-- 
     <div class="audio-player">
       <div class="icon-container">
@@ -26,12 +33,7 @@
     </div>
   -->
 
-    <!-- <div id="sound-control">
-      <img class="button-instruction"
-              src="./img/icons8-audio-64.png"
-              alt="sound on/off"
-            />
-    </div> -->
+    <!-- <-->
 
     <!--Div du popUp des instructions-->
     <div id="div_instructions">
